version/0.31/_sources/api/solver/_autosummary/settings/degassing_1_child.rst.txt
:orphan:

.. _degassing_1_child:

degassing_child
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.degassing_1_child
    :show-inheritance:

.. rubric:: Attributes

============================   ======================================

Attribute                                                     Summary

============================   ======================================
:ref:`name <name_2>`                              Name of the object.

:ref:`location <location_2>`                     Input location name.

:ref:`settings <settings_5>`       Domain name to define settings on.

============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

================================   ================

Parent                                      Summary

================================   ================
:ref:`degassing_1 <degassing_1>`       Thread-type.

================================   ================

